# PatternPy

./: LICENSE.md  README.md  pyproject.toml
docs/source/: conf.py  index.rst
tests/: test_hs.py
tradingpatterns/: hard_data.py  tradingpatterns.py
